<resources>
    <string name="app_name">My Favorite Movies</string>
    <string name="add_movie">Add Movie</string>
    <string name="edit">Edit</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="show_list_by_year">Show List By Year</string>
    <string name="show_list_by_rating">Show List By Rating</string>
    <string name="save_changes">Save Changes</string>
    <string name="label_movie_name">Name:</string>
    <string name="label_description">Description:</string>
    <string name="label_genre">Genre:</string>
    <string name="label_rating">Rating:</string>
    <string name="label_year">Year:</string>
    <string name="label_imdb">IMDB:</string>
    <string name="error_name">Enter a valid movie name.</string>
    <string name="error_movie_length">Movie name exceeds 50 characters</string>
    <string name="error_description">Enter valid description.</string>
    <string name="error_description_length">Description exceeds 1000 characters</string>
    <string name="error_year">Enter valid year.</string>
    <string name="error_imdblink">Enter valid link.</string>
    <string name="label_movies_by_year">Movies by Year</string>
    <string name="label_movie_title">Title:</string>
    <string name="label_movies_by_rating">Movies by Rating</string>
    <string name="btn_finish">Finish</string>
    <string-array name="genre_category">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>
</resources>
