<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.myfavoritemovies.MainActivity">

    <Button
        android:text="@string/show_list_by_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonByYear"
        android:layout_alignLeft="@+id/buttonByYear"
        android:layout_alignStart="@+id/buttonByYear"
        android:layout_marginTop="18dp"
        android:id="@+id/buttonByRating" />

    <Button
        android:text="@string/add_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:id="@+id/buttonAddMovie"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/show_list_by_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/buttonByYear"
        android:layout_below="@+id/buttonDeleteMovie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEdit"
        android:layout_below="@+id/buttonAddMovie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <Button
        android:text="@string/delete_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDeleteMovie"
        android:layout_below="@+id/buttonEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
</RelativeLayout>
