<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.myfavoritemovies.EditMovieActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:layout_weight="10.23"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="5dp">

        <TextView
            android:text="@string/label_description"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/textViewDescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextDescription"
            android:padding="5dp"
            android:background="@drawable/border"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:padding="5dp"
        >

        <TextView
            android:text="@string/label_genre"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:id="@+id/textViewGenre"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinnerGenre"
            android:entries="@array/genre_category"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating"
            android:layout_weight="0.10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/seekBarRating"
            android:layout_weight="0.86"
            android:max="5"
            android:progress="1"
            android:padding="5dp"/>

        <TextView
            android:layout_width="23dp"
            android:layout_height="38dp"
            android:id="@+id/textViewRatingOutput"
            android:layout_weight="0.15"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewYear"
            android:layout_weight="1.30"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextYear"
            android:layout_weight="0.49"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:text="@string/label_imdb"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIMDB"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:textStyle="normal|bold"
            android:textSize="22sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextIMDBLink"
            android:layout_weight="1.10"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:text="@string/save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMovieSaveChanges"
        android:padding="5dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal|bold" />

</LinearLayout>
